--- a/FS001-Dashboard Design #01/css/style.css
+++ b/FS001-Dashboard Design #01/css/style.css
@@ -142,3 +142,259 @@ i{
     font-size: 12px;
 }
 
+main{
+    border-right: 2px solid #f0F0F0;
+    border-left: 2px solid #f0F0F0;
+    padding: 40px 40px 0 40px;
+}
+
+main header{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+main header h5{
+    font-size: 18px;
+    color: #369FFF;
+    font-weight: 400;
+}
+
+main .separator{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+main .separator .info{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+main .separator .info h3{
+    font-size: 30px;
+}
+
+main .separator .info a{
+    margin-top: 6px;
+    font-size: 14px;
+}
+
+main .separator .search{
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+main .separator .search i{
+    font-size: 20px;
+    color: #BDBDBD;
+}
+
+main .separator .search input{
+    border: none;
+    font-size: 14px;
+    width: 80px;
+    outline: none;
+}
+
+main .separator .search input::placeholder{
+    color: #BDBDBD;
+}
+
+main .analytics{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+main .analytics .item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 140px;
+    min-width: 214px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+main .analytics .item .progress{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main .analytics .item .progress .info h5{
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+main .analytics .item .progress p{
+    color: #fff;
+    font-size: 12px;
+}
+
+main .analytics .item .progress .progress-bar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    width: 52px;
+    height: 52px;
+    /*background-color: #006ED3;*/
+    border-radius: 50%;
+}
+
+main .analytics .item:nth-child(1) .progress .progress-bar{
+    background: radial-gradient(closest-side, #006ED3 79%, transparent 80% 100%),
+                conic-gradient(#208BEE 25%, #FFF 0%);
+}
+
+main .analytics .item:nth-child(2) .progress .progress-bar{
+    background: radial-gradient(closest-side, #FF993A 79%, transparent 80% 100%),
+                conic-gradient(#FF7E07 50%, #FFF 0%);
+}
+
+main .analytics .item:nth-child(3) .progress .progress-bar{
+    background: radial-gradient(closest-side, #8AC53E 79%, transparent 80% 100%),
+    conic-gradient(#6EB33D 75%, #FFF 0%);
+}
+
+main .analytics .item:nth-child(4) .progress .progress-bar{
+    background: radial-gradient(closest-side, #FFD043 79%, transparent 80% 100%),
+    conic-gradient(#FFC000 25%, #FFF 0%);
+}
+
+main .analytics .item .progress .progress-bar::before{
+    font-size: 10px;
+    color: #fff;
+}
+
+main .analytics .item:nth-child(1) .progress .progress-bar::before,
+main .analytics .item:nth-child(4) .progress .progress-bar::before{
+    content: "75%";
+}
+
+main .analytics .item:nth-child(2) .progress .progress-bar::before{
+    content: "50%";
+}
+
+main .analytics .item:nth-child(3) .progress .progress-bar::before{
+    content: "25%";
+}
+
+main .analytics .item i{
+    font-size: 80px;
+    color: #FFF;
+}
+
+main .analytics .item:nth-child(1){
+    background: #006ED3;
+}
+
+main .analytics .item:nth-child(2){
+    background: #FF993A;
+}
+
+main .analytics .item:nth-child(3){
+    background: #8AC53E;
+}
+
+main .analytics .item:nth-child(4){
+    background: #FFD043;
+}
+
+main .separator input{
+    border: none;
+    color: #369FFF;
+    font-weight: bold;
+    outline: none;
+    width: 100px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator{
+    opacity: 0.5;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+main .planning{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+main .planning .item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #F7F7F7;
+    border-radius: 20px;
+}
+
+main .planning .item .left{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+main .planning .item .left .icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .planning .item:nth-child(1) .left .icon{
+    background: #D1E6F9;
+}
+
+main .planning .item:nth-child(1) .left .icon i{
+    color: #369FFF;
+}
+
+main .planning .item:nth-child(2) .left .icon{
+    background: #F9E5D2;
+}
+
+main .planning .item:nth-child(2) .left .icon i{
+    color: #FF993A;
+}
+
+main .planning .item:nth-child(3) .left .icon{
+    background: #E2EDD2;
+}
+
+main .planning .item:nth-child(3) .left .icon i{
+    color: #8AC53E;
+}
+
+main .planning .item:nth-child(4) .left .icon{
+    background: #F9F0D3;
+}
+
+main .planning .item:nth-child(4) .left .icon i{
+    color: #FFD143;
+}
+
+main .planning .item .left .details h5{
+    font-size: 12px;
+    font-weight: 600;
+}
+
+main .planning .item .left .details p{
+    font-size: 12px;
+    color: #BDBDBD;
+}
+
+main .planning .item > i{
+    cursor: pointer;
+}
