--- a/FS001-Dashboard Design #01/css/style.css
+++ b/FS001-Dashboard Design #01/css/style.css
@@ -635,3 +635,21 @@ main .planning .item > i{
         font-size: 36px;
     }
 }
+
+@media screen and (max-width: 768px){
+    .container{
+        grid-template-columns: 1fr;
+        padding-top: 80px;
+    }
+    .container .right-section > .top{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        padding: 20px;
+        z-index: -100;
+    }
+    .container .right-section .weekly{
+        margin-bottom: 20px;
+    }
+}
