--- a/FS002-Business Agency/css/style.css
+++ b/FS002-Business Agency/css/style.css
@@ -126,6 +126,8 @@ body{
     height: 300vh;
 }
 
+body.nav-active{overflow: hidden}
+
 ::-webkit-scrollbar{width: 100%;}
 
 ::-webkit-scrollbar-track{background-color: hsl(0,0%,98%)}
@@ -138,7 +140,20 @@ body{
   #REUSED STYLE
 \*-----------------------------------*/
 
+.container{padding-inline: 16px}
 
+.social-list{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.social-link{
+    font-size: 2rem;
+    transition: var(--transition-1);
+}
+
+.social-link:is(:hover,:focus-visible){transform: translateY(-3px)}
 
 
 
@@ -146,9 +161,124 @@ body{
   #HEADER
 \*-----------------------------------*/
 
+.header .btn{
+    display: none;
+}
 
+.header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-block: 20px;
+    box-shadow: var(--shadow-1);
+    z-index: 4;
+}
 
+.header.active{
+    background-color: var(--white);
+    position: fixed;
+    animation: sideIn 0.5s ease forwards;
+}
 
+@keyframes sideIn {
+    0% {transform: translateY(-100%);}
+    100% {transform: translateY(0)}
+}
+
+.header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
+
+/* 这里2个样式之间没有空格分隔 */
+.header.active .logo-light,
+.header .logo-dark {display: none}
+
+.header .logo-light,
+.header.active .logo-dark {display: block}
+
+.nav-open-btn{
+    font-size: 3.5rem;
+    color: var(--white);
+}
+
+.header.active .nav-open-btn{
+    color: var(--charcoal);
+}
+
+.navbar{
+    position: fixed;
+    top: 0;
+    left: -300px;
+    background-color: var(--raisin-black);
+    color: var(--white);
+    max-width: 300px;
+    width: 100%;
+    height: 100vh;
+    padding: 30px;
+    padding-block-end: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    z-index: 2;
+    visibility: hidden;
+    transition: var(--transition-3);
+}
+
+.navbar.active{
+    visibility: visible;
+    transform: translateX(300px);
+}
+
+.navbar-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-close-btn{
+    background-color: var(--white_a8);
+    color: var(--white);
+    font-size: 2rem;
+    padding: 6px;
+    border-radius: var(--radius-circle);
+    transition: var(--transition-1);
+}
+
+.nav-close-btn ion-icon{--ionicon-stroke-width:50px}
+
+.nav-close-btn:is(:hover,:focus-visible){background-color: var(--white_a12)}
+
+.navbar-list{margin-block-end: auto}
+
+.navbar-link{
+    font-weight: var(--fw-700);
+    padding-block: 6px;
+}
+
+.contact-link{transition: var(--transition-1);}
+
+.contact-link:is(:hover,:focus-visible){color: var(--violet-blue-crayola)}
+
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--raisin-black);
+    pointer-events: none;
+    opacity: 0;
+    transition: var(--transition-1);
+}
+
+.overlay.active{
+    pointer-events: all;
+    opacity: 0.8;
+}
 
 /*-----------------------------------*\
   #HERO
