--- a/FS002-Business Agency/css/style.css
+++ b/FS002-Business Agency/css/style.css
@@ -570,7 +570,18 @@ body.nav-active{overflow: hidden}
   #STATS
 \*-----------------------------------*/
 
+.stats{background-image: linear-gradient(to bottom, var(--white) 50%, var(--cultured) 50%)}
 
+.stats-card{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    gap: 36px 24px;
+    padding: 45px 30px;
+    border-radius: var(--radius-8);
+}
+
+.stats-card .card-text > * {color: var(--white)}
 
 
 
