--- a/FS002-Business Agency/css/style.css
+++ b/FS002-Business Agency/css/style.css
@@ -123,12 +123,11 @@ body{
     color: var(--black-coral);
     font-size: 1.6rem;
     line-height: 1.7;
-    height: 300vh;
 }
 
 body.nav-active{overflow: hidden}
 
-::-webkit-scrollbar{width: 100%;}
+::-webkit-scrollbar{width: 10px;}
 
 ::-webkit-scrollbar-track{background-color: hsl(0,0%,98%)}
 
@@ -395,7 +394,7 @@ body.nav-active{overflow: hidden}
     animation: pluse 2s ease infinite;
 }
 
-.hero-card .play-btn:is{:hover, :focus-visible} {color: var(--violet-blue-crayola)}
+.hero-card .play-btn:is(:hover, :focus-visible) {color: var(--violet-blue-crayola)}
 
 @keyframes pluse {
     0% {box-shadow: 0 0 0 0 var(--white_a70)}
@@ -488,7 +487,7 @@ body.nav-active{overflow: hidden}
   #ABOUT
 \*-----------------------------------*/
 
-.about{
+.about .container{
     display: grid;
     gap: 50px;
 }
@@ -505,7 +504,7 @@ body.nav-active{overflow: hidden}
 
 .accordion-btn ion-icon{
     font-size: 1.5rem;
-    color: var(--black-coral);
+    color: var(--blue-crayola);
     transition: var(--transition-1);
 }
 
@@ -516,7 +515,7 @@ body.nav-active{overflow: hidden}
 .accordion-btn .span {transition: var(--transition-1)}
 
 .accordion-btn:is(:hover, :focus-visible) .span,
-.accordion-btn.expanded .accordion-btn .span{color: var(--violet-blue-crayola)}
+.accordion-card.expanded .accordion-btn .span{color: var(--violet-blue-crayola)}
 
 .accordion-content{
     padding-inline-start: 24px;
@@ -541,7 +540,7 @@ body.nav-active{overflow: hidden}
     gap: 50px;
 }
 
-.feature .section-title{
+.feature .section-text{
     margin-block: 25px 30px;
 }
 
@@ -659,7 +658,9 @@ body.nav-active{overflow: hidden}
     color: var(--light-gray);
 }
 
-.footer-brand .footer-text{color: var(--white)}
+.footer-brand .footer-text{margin-block: 20px}
+
+.footer .social-list{color: var(--white)}
 
 .footer-list-title{
     color: var(--white);
@@ -706,3 +707,200 @@ body.nav-active{overflow: hidden}
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
+
+/* responsive for large than 575px screen */
+@media (min-width: 575px){
+    /* Reused Style */
+    .container{
+        max-width: 540px;
+        width: 100%;
+        margin-inline: auto;
+    }
+
+    /* Projects */
+    .project-card .card-content{
+        padding: 40px;
+    }
+}
+
+/* responsive for large than 768px screen */
+@media (min-width: 768px){
+    /* Custom Property */
+    :root{
+        --section-padding: 120px;
+    }
+
+    /* Reused Style */
+    .container{max-width: 720px}
+
+    .grid-list{grid-template-columns: 1fr 1fr}
+
+    /* header */
+    .header .btn{
+        display: block;
+        margin-inline-start: auto;
+        padding: 8px 20px;
+    }
+
+    .header.active .btn{
+        background-color: var(--violet-blue-crayola);
+        border-color: var(--violet-blue-crayola);
+        color: var(--white);
+    }
+
+    /* HERO */
+    .hero-content{
+        max-width: 85%;
+        margin-inline: auto;
+    }
+
+    .hero-text {--fs-5: 2rem}
+
+    /* Service */
+    .service .section-title{
+        max-width: 30ch;
+        margin-inline: auto;
+    }
+
+    /* About */
+    .about .container{
+        grid-template-columns: 1fr 0.7fr;
+        align-items: center;
+    }
+
+    /* Feature */
+    .feature .container{
+        grid-template-columns: 0.7fr 1fr;
+        align-items: center;
+    }
+
+    .feature-banner{ order: 1}
+}
+
+/* responsive for large than 992px screen */
+@media (min-width: 992px){
+    /* Reused Style */
+    .container{max-width: 960px}
+
+    /* header */
+    .nav-open-btn,
+    .navbar > *:not(.navbar-list),
+    .overlay{display: none}
+
+    .navbar,
+    .navbar.active{
+        all: unset;
+        display: block;
+        margin-inline: auto 24px;
+    }
+
+    .navbar-list{
+        display: flex;
+        gap: 30px;
+    }
+
+    .navbar-link{
+        color: var(--white);
+        transition: var(--transition-1);
+    }
+
+    .navbar-link:is(:hover, :focus-visible){opacity: 0.7}
+
+    .header.active .navbar-link{color: var(--charcoal)}
+
+    .header.active .navbar-link:is(:hover, :focus-visible){
+        opacity: 1;
+        color: var(--violet-blue-crayola);
+    }
+
+    .header .btn{margin-inline-start: 0}
+
+    .header.active .btn{
+        background-color: var(--violet-blue-crayola);
+        border-color: var(--violet-blue-crayola);
+        color: var(--white);
+    }
+
+    /* Hero */
+    .hero{
+        padding-block-start: calc(var(--section-padding));
+        text-align: left;
+    }
+
+    .hero .container{
+        grid-template-columns: 1fr 0.8fr;
+        align-items: center;
+    }
+
+    .hero-content{
+        max-width: unset;
+        margin-inline: 0;
+    }
+
+    .btn-wrapper{justify-content: flex-start}
+
+    /* STATS */
+    .stats-card{grid-template-columns: repeat(4,1fr)}
+
+    /* PROJECT */
+    .project .section-title{
+        max-width: 32ch;
+        margin-inline: auto;
+    }
+
+    /* CTA */
+    .cta .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .cta .btn{min-width: max-content}
+
+    .cta .section-title{
+        max-width: 30ch;
+        margin-block-end: 0;
+    }
+
+    /* FOOTER */
+    .footer .grid-list{grid-template-columns: repeat(4,1fr)}
+}
+
+/* responsive for large than 1200px screen */
+@media (min-width: 1200px){
+    /* Reused Style */
+    .container{max-width: 1140px}
+
+    /* Hero */
+    .hero-text{
+        padding-inline-end: 100px;
+    }
+
+    /* SERVICE */
+    .service .grid-list{grid-template-columns: repeat(4, 1fr)}
+
+    /* STATS */
+    .stats .container{max-width: 70%}
+
+    .stats-card{padding: 60px}
+
+    /* PROJECT */
+    .project .grid-list{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    /* FOOTER */
+    address.footer-text{
+        padding-inline-end: 100px;
+        margin-block-end: 16px;
+    }
+}
+
+/* responsive for large than 1400px screen */
+@media (min-width: 1400px){
+    /* Reused Style */
+    .container{max-width: 1320px}
+
+    /* Feature */
+    .feature-list{grid-template-columns: 1fr 1fr}
+}
