--- a/FS003-Wedding Agency Website/css/style.css
+++ b/FS003-Wedding Agency Website/css/style.css
@@ -46,7 +46,7 @@ header.active{
 }
 
 .logo{
-    font-family: 'Great Vibes', sans-serif;
+    font-family: 'Great Vibes', cursive;
     font-size: 40px;
     color: #000000;
     letter-spacing: 2px;
@@ -76,7 +76,7 @@ header.active{
     letter-spacing: 1px;
     cursor: pointer;
     transition: 0.5s;
-    font-weight: 300;
+    font-weight: 350;
     padding: 10px;
 }
 
@@ -170,6 +170,7 @@ header.active{
     width: 60vw;
     z-index: 1100;
     transition: ease-in-out 3s;
+    opacity: 0;
     visibility: hidden;
 }
 
@@ -355,7 +356,7 @@ header.active{
     position: absolute;
     z-index: 1100;
     color: #111111;
-    animation: flink 1s linear infinite;
+    animation: flink 2s linear infinite;
 }
 
 .move-down ion-icon{
