--- a/FS003-Wedding Agency Website/css/style.css
+++ b/FS003-Wedding Agency Website/css/style.css
@@ -394,7 +394,31 @@ header.active{
 }
 
 /* Sections General */
+section{
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    top: 100vh;
+    bottom: 0;
+    background: #ffffff;
+    transition: ease-in-out 1s;
+    transform-origin: bottom;
+    z-index: 1100;
+    opacity: 0;
+}
 
+section::-webkit-scrollbar{
+    display: none;
+}
+
+section.section-show{
+    padding: 150px 100px 100px;
+    top: 0;
+    height: auto;
+    min-height: 100vh;
+    overflow-y: visible;
+    opacity: 1;
+}
 
 /* About Section */
 
