--- a/FS003-Wedding Agency Website/css/style.css
+++ b/FS003-Wedding Agency Website/css/style.css
@@ -517,7 +517,85 @@ section p{
 
 
 /* Services Section */
+.services::before{
+    position: absolute;
+    content: '';
+    left: 50%;
+    transform: translateX(-50%);
+    top: 250px;
+    height: 100px;
+    width: 2px;
+    background: #111111;
+}
 
+.services-card{
+    position: relative;
+    margin: 20px 0;
+    width: 350px;
+    height: 500px;
+    background: #ffffff;
+    border: none;
+    transform-style: preserve-3d;
+    transform: perspective(2000px);
+    transition: ease-in-out 1s;
+    border-radius: 0;
+    box-shadow: inset 300px 0 50px rgba(0,0,0,0.25);
+}
+
+.services-card:hover{
+    transform: perspective(2000px) rotate(-10deg);
+    box-shadow: inset 20px 0 50px rgba(0,0,0,0.25);
+    z-index: 1000;
+}
+
+.services-card .img-box{
+    position: relative;
+    border-style: none;
+    width: 100%;
+    height: 100%;
+    transform-origin: left;
+    z-index: 1;
+    transition: 1s;
+}
+
+.services-card:hover .img-box{
+    transform: rotateY(-130deg);
+}
+
+.services-card .img-box img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.services-card .details{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 50px 20px 20px;
+}
+
+.services-card .details::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background: url("../images/bg-tree.png") no-repeat center;
+    background-size: cover;
+    opacity: 0.1;
+}
+
+.services-card .details h4::first-letter{
+    color: var(--primary);
+    font-size: 1.5em;
+}
 
 /* Portfolio Section */
 
