--- a/FS004-Profiles Website Landing Page/css/style.css
+++ b/FS004-Profiles Website Landing Page/css/style.css
@@ -19,3 +19,85 @@ body{
     overflow: hidden;
     transition: 1s;
 }
+
+.banner{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    overflow: hidden;
+}
+
+.banner .item{
+    position: relative;
+    width: 33vw;
+    overflow: hidden;
+    border-radius: 5px;
+    transition: ease-in-out 0.5s;
+}
+
+.banner .item::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    visibility: hidden;
+    opacity: 0;
+}
+
+.banner .item:hover::after{
+    opacity: 1;
+    visibility: visible;
+}
+
+.banner .item img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.banner .item:nth-of-type(1),
+.banner .item:nth-of-type(2),
+.banner .item:nth-of-type(3){
+    grid-row: 1/3;
+}
+
+.banner .item:nth-of-type(4){
+    grid-column: 1/3;
+    grid-row: 3/4;
+    width: 66vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner .item:nth-of-type(5){
+    grid-row: 3/4;
+}
+
+.banner .item:nth-of-type(6),
+.banner .item:nth-of-type(7){
+    grid-row: 4/6;
+}
+
+.banner .item .title{
+    color: #ffFFFF;
+    font-size: 8rem;
+    z-index: 900;
+}
+
+.banner .item .name{
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    color: #ffFFFF;
+    font-size: 2.5rem;
+    cursor: pointer;
+    z-index: 900;
+}
