--- a/FS004-Profiles Website Landing Page/css/style.css
+++ b/FS004-Profiles Website Landing Page/css/style.css
@@ -37,6 +37,15 @@ body{
     transition: ease-in-out 0.5s;
 }
 
+.banner .item.active{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
 .banner .item::after{
     position: absolute;
     content: '';
@@ -49,7 +58,8 @@ body{
     opacity: 0;
 }
 
-.banner .item:hover::after{
+.banner .item:hover::after,
+.banner .item.active::after{
     opacity: 1;
     visibility: visible;
 }
@@ -100,4 +110,48 @@ body{
     font-size: 2.5rem;
     cursor: pointer;
     z-index: 900;
+}
+
+.banner .item .name.active{
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 5rem;
+    z-index: 1000;
+}
+
+.banner .item .description{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70%;
+    color: #ffFFFF;
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 300;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.banner .item .description.active{
+    opacity: 1;
+    visibility: visible;
+    z-index: 1000;
+}
+
+.banner .close{
+    position: absolute;
+    bottom: 100px;
+    right: 100px;
+    color: #ffFFFF;
+    font-size: 3rem;
+    z-index: 1100;
+    opacity: 0;
+    visibility: hidden;
+    transition: ease-in-out 0.5s;
+}
+
+.banner .close.active{
+    opacity: 1;
+    visibility: visible;
 }
