FS005 add call up section

--- a/FS005-Fashion Ecommerce Full Website/css/style.css
+++ b/FS005-Fashion Ecommerce Full Website/css/style.css
@@ -352,3 +352,48 @@ header{
 .special .content{
     left: 100px;
 }
+
+/* Main Section */
+main{
+    width: 100%;
+    padding: 100px 0;
+    background: #ffffff;
+}
+
+/* Call up section */
+section.call-up{
+    width: 100%;
+    padding: 0 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+
+.call-up-box{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    padding: 40px;
+    box-shadow: 0 0 25px rgba(0,0,0,0.12);
+    background: #ffffff;
+}
+
+.call-up-box ion-icon{
+    font-size: 5em;
+    color: var(--primary);
+}
+
+.call-up-box h4{
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.call-up-box p{
+    font-weight: 300;
+}
+
