--- a/FS005-Fashion Ecommerce Full Website/css/style.css
+++ b/FS005-Fashion Ecommerce Full Website/css/style.css
@@ -33,6 +33,12 @@ header{
     z-index: 1100;
 }
 
+header.header-scrolled{
+    padding: 18px 100px;
+    background: rgba(0,0,0,0.8);
+    backdrop-filter: blur(20px);
+}
+
 .logo{
     position: relative;
     font-size: 30px;
@@ -1009,4 +1015,32 @@ footer{
 .chat:hover{
     background: #ffffff;
     color: var(--primary);
+}
+
+/* back to top button */
+.back-to-top{
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 30px;
+    background: var(--primary);
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1100;
+}
+
+.back-to-top ion-icon{
+    font-size: 1.5em;
+}
+
+.back-to-top.active{
+    visibility: visible;
+    opacity: 1;
 }
