--- a/FS008-Sports Car Website/css/style.css
+++ b/FS008-Sports Car Website/css/style.css
@@ -183,3 +183,20 @@ header .menu.active{
     background: linear-gradient(var(--primary),var(--primary), transparent);
     z-index: 100;
 }
+
+/* Background video */
+.banner .bg-video{
+    display: none;
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.banner .bg-video.active{
+    display: block;
+}
